--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+azure-functions==1.5.0
 cachetools==4.2.0
 certifi==2020.12.5
 chardet==3.0.4
@@ -14,10 +15,12 @@ protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyodbc==4.0.30
+python-dateutil==2.8.1
 pytz==2020.4
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
 six==1.15.0
+SQLAlchemy==1.3.22
 uritemplate==3.0.1
 urllib3==1.26.2
